# rags

./: .eslintignore  .eslintrc.yml  .gitignore  .prettierignore  .prettierrc  CHANGELOG.md  README.md  TODO.md  eslint.config.js  eslint.config.ts  flake.nix  meson.build  package-lock.json  package.json  pnpm-lock.yaml  post_install.sh  tsconfig.json  typedoc.json
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: cachix.yml  create_release.yaml  docs.yml  lint.yml  release.yml  version-check.yml
ags/: package.json
ags-docs/: package.json
ags/src/service/: greetd.ts
docs/: astro.config.mjs  index.md  package-lock.json
docs/assets/: custom.css  nav-expand.js
docs/guides/advanced/: 01-custom-service.md  02-subclassing-gtk-widgets.md  03-common-issues.md  04-examples.md
docs/guides/configuration/: 01-config-object.md  02-app.md  03-variables.md  04-reactivity.md  05-widgets.md  06-services.md  07-utils.md  08-theming.md  09-cli.md  10-home-manager.md  11-lazy-windows.md  12-theme-switching.md
docs/guides/getting-started/: 01-installation.md  02-first-widgets.md  03-javascript.md  04-type-checking.md
docs/guides/services/: 01-applications.md  02-audio.md  03-backlight.md  04-battery.md  05-bluetooth.md  06-greetd.md  07-hyprland.md  08-mpris.md  09-network.md  10-notifications.md  11-powerprofiles.md  12-systemtray.md  13-lockscreen.md  14-polkit.md
example/lazy-windows/: README.md  config.js  style.css
example/lockscreen/: README.md  config.js  style.css
example/polkit-agent/: README.md  config.js  style.css
example/theme-switching/: README.md  config.js  style.css
example/theme-switching/themes/: catppuccin.css  gruvbox.css  nord.css
nix/: package.nix  shell.nix
src/: ags.d.ts.in  app.ts  client.ts  com.github.Aylur.ags.js.in  com.github.Aylur.ags.src.gresource.xml  config.h.in  main.c  main.ts  meson.build  overrides.ts  service.ts  utils.ts  variable.ts  widget.ts
src/dbus/: types.ts
src/init/: README.md.in
src/service/: applications.ts  audio.ts  battery.ts  bluetooth.ts  brightness.ts  greetd.ts  hyprland.ts  lockscreen.ts  mpris.ts  network.ts  notifications.ts  polkit.ts  powerprofiles.ts  sessionLock.ts  systemtray.ts
src/utils/: binding.ts  errors.ts  etc.ts  exec.ts  fetch.ts  file.ts  gobject-types.ts  gobject.ts  init.ts  notify.ts  pam.ts  signal-registry.ts  system.ts  timeout.ts
src/widgets/: box.ts  button.ts  calendar.ts  centerbox.ts  circularprogress.ts  colorbutton.ts  drawingarea.ts  entry.ts  eventbox.ts  expander.ts  filechooserbutton.ts  fixed.ts  flowbox.ts  fontbutton.ts  frame.ts  grid.ts  headerbar.ts  icon.ts  image.ts  label.ts  levelbar.ts  listbox.ts  menu.ts  menubar.ts  menuitem.ts  notebook.ts  overlay.ts  paned.ts  progressbar.ts  revealer.ts  scrollable.ts  searchentry.ts  separator.ts  slider.ts  spinbutton.ts  spinner.ts  stack.ts  switch.ts  textview.ts  togglebutton.ts  (+2 more)
subprojects/brightness/: brightness.c  brightness.h  meson.build  meson_options.txt
subprojects/gutils/: meson.build  pam.c  pam.h  session-lock.c  session-lock.h
test/: integration.js
types/: ambient.d.ts  global.d.ts
